--- a/Silyani Registartion Form/index.html
+++ b/Silyani Registartion Form/index.html
@@ -8,5 +8,64 @@
 </head>
 <body>
     
+  
+    <img src="Saylani-logo.png" alt="Silyani logo for header">
+      <h1>STUDENT REGISTRATION FORM</h1>
+      <div class="mid-content">
+    <form id="main-container">
+        First Name: &nbsp; &nbsp; &nbsp; 
+        <input type="text" placeholder="Enter first name">
+        <span>(max 30 characters a-z A-Z)</span>
+        <br><br>
+        Last Name: &nbsp; &nbsp; &nbsp;
+        <input type="text" placeholder="Enter last name">
+        <span>(max 30 characters a-z A-Z)</span>
+        <br><br>
+        Date of Birth:&nbsp; &nbsp; &nbsp;
+        <input type="date" name="date" id="">
+        <br><br>
+        Email ID:&nbsp; &nbsp; &nbsp;
+        <input type="email" name="email" id="" placeholder="Enter Email address">
+        <br><br>
+        Mobile Number:&nbsp; &nbsp; &nbsp;
+        <input type="number" name="number" id="" placeholder="Enter Mobile Number">
+        <span>(10 digit Number)</span>
+        <br><br>
+        Gender: &nbsp; &nbsp; &nbsp;
+        Male:<input type="checkbox" name="Male" id="">
+        Female:<input type="checkbox" name="female" id="">
+        <br> <br>
+        Address:&nbsp; &nbsp; &nbsp;
+        <textarea name="textarea" id="" cols="15" rows="5"></textarea>
+        <br> <br>
+        City: &nbsp; &nbsp; &nbsp;
+        <input type="text" placeholder="Enter your city name">
+        <span>(max 30 characters a-z A-Z)</span>
+        <br> <br>
+        Pin Code: &nbsp; &nbsp; &nbsp;
+        <input type="number" name="" id="" placeholder="Enter pincode">
+        <span>(Enter 6 digit number</span>
+        <br> <br>
+        State: &nbsp; &nbsp; &nbsp;
+        <input type="text" placeholder="Enter state">
+        <br> <br>
+        Country: &nbsp; &nbsp; &nbsp;
+        <input type="text" placeholder="Enter coutry name">
+        <br> <br>
+        Hobbies: &nbsp; &nbsp; &nbsp;
+        Drawing <input type="checkbox" name="" id="">
+        Singing <input type="checkbox" name="" id="">
+        Sketching <input type="checkbox" name="" id="">
+        Others <input type="checkbox" name="" id="">
+        <br> <br>
+
+
+
+
+
+           <button><a href="submit.html">Submit</a></button>
+           <Button>Reset</Button>
+    </form>
+</div>
 </body>
 </html>
