--- a/Saylani Website/index.html
+++ b/Saylani Website/index.html
@@ -5,15 +5,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  
 
   <title>Saylani Welfare Trust</title>
 
 </head>
 
 <body>
+    <div class="nav-bar">
+      <a href="http://"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+      <a href="http://"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+      <a href="http://"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+      <a href="http://"><i class="fa fa-youtube-square" aria-hidden="true"></i></a>
+      <span>Millions of people's life has changed, millions more awaiting your donation</span>
+      <span class="nav-btn">
+        <button>UK Donor</button>
+        <button>Doante Now</button>
+        <button>SMIT Result</button>
+      </span>
+ 
+
+    </div>
 
   <div class="menu-bar">
     <img src="./logo/Saylani-logo.png" alt="Saylani logo" style="width: 250px;">
@@ -192,12 +204,49 @@
     </div>
   </section>
 
+  <section>
+    <H2 style="text-align: center; padding-top: 30px;">IMAGE GALLARY</H2>
+      <span class="img-glry">
+        <img src="./ImageGallary/food.jpg" alt="" width="250px">
+        <img src="./ImageGallary/hazrat.jpg" alt="" width="250px"> 
+        <img src="./ImageGallary/hazrat2.jpg" alt="" width="250px"> 
+        <img src="./ImageGallary/rashan2.jpg" alt="" width="250px">
+        <img src="./ImageGallary/hazrat.jpg" alt="" width="250px"> 
+
+      </span>
+  </section>
+
+    <div class="footer-content">
+      <div class="footer-social-icons">
+        <p>Connect With Us</p>
+       <a href="http://"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+       <a href="http://"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+       <a href="http://"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+       <a href="http://"><i class="fa fa-youtube-square" aria-hidden="true"></i></a>
+      </div>
+        <p>Head Office <br> A-25, Bahadurabad Chowrangi Karachi, Pakistan</p>
+        <ul>
+          <li><i class="fa fa-phone" aria-hidden="true"></i> UAN: 111-729-526</li>
+          <li><i class="fa fa-phone" aria-hidden="true"></i>CELL: 92-311-1729526</li>
+          <li><i class="fa fa-phone" aria-hidden="true"></i>USA NO +1(716)941 7792</li>
+          <li><i class="fa fa-phone" aria-hidden="true"></i>UK NO (+44)115 970 6256</li>
+          <li><i class="fa fa-envelope-o" aria-hidden="true"></i> info@saylaniwelfare.com</li>
+        </ul>
+     
+
+    </div>
 
 
+
+<footer>Copyright © 2020 Saylani Welfare</footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </body>
 
